# ocp-build-system

./: .gitignore  LICENSES_bundled  Makefile  README.md  create_lib.sh  environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml  environment-ocpaddons-3.13.yml  environment-ocpaddons.yml  environment-pywrap-3.13.yml  environment.yml  get-config.py  get-min-version.py  local-build.sh  local-vtk-build.sh  ocp.py  setup.py  setup_first_try.py
.github/actions/build-ocp/: action.yml
.github/actions/build-ocp-addons/: action.yml
.github/actions/build-ocp-source/: action.yml
.github/actions/build-sdks/: action.yml
.github/actions/test-ocp/: action.yml
.github/actions/test-ocp-addons/: action.yml
.github/workflows/: build-ocp-stubs.yml  build-ocp.yml  build-ocpaddons.yml  build-vtk.yml  build-wheel.yml  cibuildwheel.yml  local-build.yml  release.yml
cadquery_ocp_proxy/: Makefile  README.md  pyproject.toml
cadquery_ocp_proxy/src/cadquery_ocp_proxy/: __init__.py  _version.py
cadquery_vtk/: README.md  pyproject.toml
cmake/: RapidJSONConfig.cmake  vtk-config-linux.cmake  vtk-config-macos-13.cmake  vtk-config-macos-14.cmake  vtk-config-macos-15.cmake  vtk-config-macos.cmake  vtk-config-ubuntu-20.04.cmake  vtk-config-ubuntu-22.04.cmake  vtk-config-windows-2019.cmake  vtk-config-windows.cmake
patches/: build123d-novtk.patch  build123d-vtk.patch  build123d.patch  cadquery.patch  no-vtk-2.patch  no-vtk.patch  pandas.patch
patches/occt-7.7.2/: blobfish.patch
patches/occt-7.8.1/: 0002-GeomPlate_BuildAveragePlane-BasePlan-Don-t-set-yvect.patch  0003-BRepFill_Filling-WireFromList-We-can-t-assume-that-a.patch  0005-BRepFill_Filling-Don-t-even-attempt-to-build-with-em.patch  0009-BRepFill_CompatibleWires-segfault.-See-following.patch  0015-build-Expand-preprocessor-conditional-on-non-standar.patch  0016-IntPatch_Intersection-Consider-intersection-of-a-clo.patch
patches/occt-7.9.1/: 0001-cmake-Don-t-try-to-write-to-install-directory.-You-k.patch  0004-BRepFill_Filling-Curve-constraints-confused-by-impli.patch  0006-BRepOffset_Tool-TryProject-Check-return-of-BRepLib-B.patch  0007-ChFi3d_Builder-ChFi3d_ComputeCurves-set-tolreached-f.patch  0008-BRepLib-MakeEdge-Setting-closed-flag-of-generated-ed.patch  0010-BRepFill_OffsetWire-segfault.-See-following.patch  0011-ChFiDS_FilSpine-Allow-usage-of-externally-assigned-l.patch  0012-Allow-blending-of-faces-less-than-5-degrees.-See-fol.patch  0013-BRepFill_PipeShell-Fix-segfault-with-line-as-profile.patch  0017-ChFi3d_Builder-Fix-blend-across-seam.-See-following.patch  0018-Fix-0033576-BRepTools_NurbsConvertModification-NewPo.patch
patches/occt-7.9.2/: switch-vtk-freetype-cmake-order.patch
patches/vtk-9.3.1/: 11486.patch  9987_try_except_python_import.patch  fix-threads-windows.patch
pypi/: README.md  __init__.py  __init__win.py  lib3mf-2.4.1-py3-none-manylinux_2_31_aarch64.whl  lib3mf-linux-aarch.md  ocp-tree.py  pyproject.toml
pypi-stubs/: README.md  pyproject.toml
