[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadquery-vtk"
version = "9.2.6"
requires-python = ">=3.9"
description = "This is a custom build of the VTK Python wheels which are specific to the needs of the CadQuery project."
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["VTK", "OpenCASCADE"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://vtk.org/"
Documentation = "https://docs.vtk.org/en/latest/"
Repository = "https://gitlab.kitware.com/vtk/vtk"
"Bug Tracker" = "https://gitlab.kitware.com/vtk/vtk/-/issues"
