[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadquery-ocp-stubs"
version = "7.8.1.1"
description = "API stubs for cadquery-ocp"
authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"cadquery_ocp_stubs" = "OCP-stubs"}

[tool.setuptools.package-data]
"cadquery_ocp_stubs" = ["*.pyi"]

[tool.setuptools.packages.find]
include = ["OCP-stubs*"]