[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadquery-ocp-stubs"
version = "0.0.0.0"
description = "Typing stubs for cadquery-ocp based on the official CadQuery/OCP sources"
authors = [{ name = "Bernhard Walter" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools]
package-dir = { "cadquery_ocp_stubs" = "OCP-stubs" }

[tool.setuptools.package-data]
"cadquery_ocp_stubs" = ["*.pyi"]

[tool.setuptools.packages.find]
include = ["OCP-stubs*"]
