[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadquery-ocp"
version = "0.0.0.0"
description = "Python wrapper for Open CASCADE Technology 3D geometry library based on the official CadQuery/OCP sources"
authors = [{ name = "Bernhard Walter" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = ["cadquery-ocp-proxy==0.0.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["*", "cadquery_ocp*", "OCP"]

[tool.setuptools.package-data]
"cadquery_ocp" = ["../*.so", "../*.pyd", "*.txt", "LICENSE"]
"OCP" = ["*.so", "*.pyd", "*.dll", "*.dylib"]
